exports[`Aside Controlled mode 1`] = `
<portal>
  <aside
    data-ts="Aside"
    data-ts.busy={undefined}
    data-ts.open={false}
    data-ts.title="Aside demo">
    <div
      data-ts="Panel">
      <menu
        data-ts="Menu">
        <li
          className="">
          <button
            disabled={false}>
            <span>
              Menu item
            </span>
          </button>
        </li>
      </menu>
    </div>
  </aside>
</portal>
`;

exports[`Menu Basic usage 1`] = `
<menu
  data-ts="Menu">
  <li
    className="ts-checked">
    <button
      disabled={false}>
      <span>
        Menu item 1
      </span>
      <i
        className="ts-icon-checked" />
    </button>
  </li>
  <li
    className="">
    <button
      disabled={false}>
      <span>
        Menu item 2
      </span>
    </button>
  </li>
</menu>
`;

exports[`Switch Switch should be used in a form 1`] = `
<form
  data-ts="Form">
  <fieldset>
    <span>
      Settings Page
    </span>
    <label
      htmlFor="switch-one">
      <span>
        Switch one
      </span>
      <input
        checked={true}
        disabled={false}
        id="switch-one"
        readOnly={false}
        type="checkbox" />
    </label>
  </fieldset>
</form>
`;
